# Zpods

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.client  Dockerfile.server  Makefile  README.md  docker_zpods.sh  pch.h  pods_paths  san.cnf  server_log  test.sh  zpods_cli
AppDir/: .DirIcon  AppRun  zpods_cli.desktop
CMakeModules/: GlobalIncludeDir.cmake
ZpeeLib/: .gitignore  CMakeLists.txt  library.cpp  library.h
ZpeeLib/test/: CMakeLists.txt  test1.cpp
ZpodsLib/: CMakeLists.txt  library.h
ZpodsLib/src/: CMakeLists.txt  archive.cpp  archive.h  backup.cpp  backup.h  bit_ops.cpp  bit_stream.cpp  bit_stream.h  compress.cpp  compress.h  config.h  crypto.cpp  crypto.h  enum.h  fs.cpp  fs.h  manager.cpp  manager.h  network.cpp  network.h  pch.h  zpods_core.cpp  zpods_core.h  zpods_lib.h
ZpodsLib/src/base/: bit_ops.cpp  bit_ops.h  compress.cpp  compress.h  crypto.cpp  crypto.h  fs.cpp  fs.h
ZpodsLib/src/core/: archive.cpp  archive.h  backup.cpp  backup.h  config.h  daemon.cpp  daemon.h  manager.cpp  manager.h  zpods_core.cpp  zpods_core.h
ZpodsLib/src/network/: httplib.h  json.h  network.cpp  network.h
ZpodsLib/src/transform/: archive_transform.h  compress_transform.h  encrypt_transform.h  transform.h  transform_pipeline.h  transform_pipeline_builder.h
ZpodsLib/test/: CMakeLists.txt  main.cpp  test1.cpp  test_archive.cpp  test_backup.cpp  test_bit_stream.cpp  test_compress.cpp  test_crypto.cpp  test_fs.cpp  test_manager.cpp  test_network.cpp
client/cli/src/: CMakeLists.txt  server_conn.h  zpods_cli_main.cpp
network/: CMakeLists.txt  common.cmake  zpods.proto
network/client/: CMakeLists.txt  client_pch.h  file_service_client.cpp  file_service_client.h  grpc_client.cpp  grpc_client.h  pod_service_client.cpp  pod_service_client.h  user_service_client.cpp  user_service_client.h
network/client/cli/src/: CMakeLists.txt  server_conn.cpp  server_conn.h  zpods_cli_main.cpp
network/server/src/: CMakeLists.txt  README.md  file_service.h  pod_service.h  server_db.cpp  server_db.h  server_pch.h  user_service.h  zpods_server.cpp  zpods_server.h
scripts/: build.sh  build_appimage.sh  configure.sh  deploy_local.sh  docker_build.sh  docker_build_cli.sh  gen_cmd_for_dep.py  gen_copy.py  gen_key.sh  gen_key_local.sh  install_grpc.sh  install_rocksdb.sh  light_deploy.sh  run_server.sh  server_docker_build.sh  test.sh
server/src/: .gitignore  CMakeLists.txt  greeter_client.cc  server_main.cpp  zpods_server.cpp
test_data/filter/: hard_link_to_man_fork.txt  man_printf.txt
test_data/filter/dir1/: soft_lint_to_man_fork.txt
test_data/middle/: man_epoll.txt  man_socket.txt
test_data/recursive/tiny/: a.txt
test_data/single/: man_pthreads.txt
test_data/tiny/: a.txt.1234  b.txt  c.txt
test_data/ww/: xx
